--- a/work.html
+++ b/work.html
@@ -43,35 +43,35 @@
         <div class="grid__item">
           <h2>One App to find them</h2>
           <p>
-            Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+            First time version control with Git!
           </p>
           <a href="#">See project on GitHub</a>
         </div>
         <div class="grid__item">
           <h2>and in the webness bind them"</h2>
           <p>
-            Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+            I am excited about next!
           </p>
           <a href="#">See project on GitHub</a>
         </div>
         <div class="grid__item">
           <h2>The Lord of the Web</h2>
           <p>
-            Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+            Coding is fun
           </p>
           <a href="#">See project on GitHub</a>
         </div>
         <div class="grid__item">
           <h2>Only on Career Foundry!</h2>
           <p>
-            Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+            But so much to learn
           </p>
           <a href="#">See project on GitHub</a>
         </div>
         <div class="grid__item">
           <h2>One App to bring them all</h2>
           <p>
-            Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+            It is overwhelming sometimes
           </p>
           <a href="#">See project on GitHub</a>
         </div>
