--- a/work.html
+++ b/work.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ET Portfolio</title>
+    <title>Work of Ertugrul</title>
     <!-- Add your own favicon here -->
     <link rel="shortcut icon" href="img/icon.svg">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
   </head>
   <body>
@@ -62,16 +62,9 @@
           <a href="#">See project on GitHub</a>
         </div>
         <div class="grid__item">
-          <h2>Only on Career Foundry!</h2>
-          <p>
-            But so much to learn
-          </p>
-          <a href="#">See project on GitHub</a>
-        </div>
-        <div class="grid__item">
           <h2>One App to bring them all</h2>
           <p>
-            It is overwhelming sometimes
+            But it is overwhelming sometimes
           </p>
           <a href="#">See project on GitHub</a>
         </div>
