Change of index.html
1. Change of title
2. Change of description
3. Change of font
4. footer now on the bottom

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ET Portfolio</title>
+    <title>Ertugruls Portfolio</title>
     <!-- Add your own favicon here -->
     <link rel="shortcut icon" href="img/icon.svg">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
   </head>
   <body>
@@ -34,11 +35,11 @@
       <img src="img/potrait-et.png" alt="A potrait of ET" class="profile__potrait">
       <h1>Hello World!</h1>
       <p>
-        My name is ET. I am a <span>web</span> developer from Germany.
+        My name is Ertugrul. I am a future <span class="web">&lt;web developer&gt;</span> from Berlin, Germany.
       </p>
       <a href="work.html">Check out some of my code</a>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer" id="footer">
       <p>Find me on</p>
       <div class="social-media">
         <a href="#"><img src="img/github.svg" alt="Github" class="sm-icons"></a>
