Change of about.html
1. Change of font
2. Change of description

--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About ET</title>
+    <title>About Ertugrul</title>
     <!-- Add your own favicon here -->
     <link rel="shortcut icon" href="img/icon.svg">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
   </head>
   <body>
@@ -32,13 +32,7 @@
     </header>
     <main class="main-about">
       <h1>About me</h1>
-      <p>This page is about myself. This is what I enjoy doing:</p>
-      <ul class="main-about main-about__item">
-        <li>Front-end development, which I am learning right now</li>
-        <li>Back-end development, which I will have learned at the end of the course</li>
-        <li>Test driven development and development, which is test driven</li>
-        <li>Table tennis aka ping-pong</li>
-      </ul>
+      <p>I am currently taking a full-stack web development course at CareerFoundry.</p>
       <a href="files/cv.pdf" class="button" download>Download my CV</a>
       <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
