--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </p>
       <a href="work.html">Check out some of my code</a>
     </main>
-    <footer class="page-footer" id="footer">
+    <footer class="page-footer">
       <p>Find me on</p>
       <div class="social-media">
         <a href="#"><img src="img/github.svg" alt="Github" class="sm-icons"></a>
