--- a/work.html
+++ b/work.html
@@ -36,25 +36,26 @@
     <h1 class="workh1">My work</h1>
     <div class="grid">
       <div class="grid__item">
-        <h2>"One App to rule them all</h2>
+        <h2>Pokédex</h2>
         <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+          A simple App, which uses an external API to get Information about the first generation of Pokémons. Built with HTML, CSS, JavaScript, Bootstrap and JQuery.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/ETweb51/pokedex">See project on GitHub</a>
+        <a hrfe="https://etweb51.github.io/pokedex/">See projects website</a>
       </div>
       <div class="grid__item">
-        <h2>One App to find them</h2>
+        <h2>myMovie API</h2>
         <p>
-          First time version control with Git!
+          The server-side of an web-application, which provides user information about movies, such as the genres, directors and descriptions. It also enables users to create their own account in order to create a list with their favorite movies. Built with Node.js, Express, MongoDB.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/ETweb51/movie_api">See project on GitHub</a>
       </div>
       <div class="grid__item">
-        <h2>and in the webness bind them"</h2>
+        <h2>myMovie Client</h2>
         <p>
-          I am excited about next!
+          A client-side web-application built with React.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/ETweb51/myMovie-client">See project on GitHub</a>
       </div>
       <div class="grid__item">
         <h2>The Lord of the Web</h2>
@@ -64,11 +65,12 @@
         <a href="#">See project on GitHub</a>
       </div>
       <div class="grid__item">
-        <h2>One App to bring them all</h2>
+        <h2>Meet</h2>
         <p>
-          But it is overwhelming sometimes
+          A severless progressive-web-application (PWA), which built with React. It uses the Google Calender API to fetch and show upcoming events in certain cities areound the globe. It was built on a test-driven approach.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/ETweb51/meet">See project on GitHub</a>
+        <a href="https://ETweb51.io/meet/">See projects website</a>
       </div>
     </div>
   </section>
