--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
           A simple App, which uses an external API to get Information about the first generation of Pokémons. Built with HTML, CSS, JavaScript, Bootstrap and JQuery.
         </p>
         <a href="https://github.com/ETweb51/pokedex">See project on GitHub</a>
-        <a hrfe="https://etweb51.github.io/pokedex/">See projects website</a>
+        <a href="https://etweb51.github.io/pokedex/">See projects website</a>
       </div>
       <div class="grid__item">
         <h2>myMovie API</h2>
