--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
           A severless progressive-web-application (PWA), which built with React. It uses the Google Calender API to fetch and show upcoming events in certain cities areound the globe. It was built on a test-driven approach.
         </p>
         <a href="https://github.com/ETweb51/meet">See project on GitHub</a>
-        <a href="https://ETweb51.io/meet/">See projects website</a>
+        <a href="https://ETweb51.github.io/meet/">See projects website</a>
       </div>
     </div>
   </section>
