--- a/work.html
+++ b/work.html
@@ -58,11 +58,11 @@
         <a href="https://github.com/ETweb51/myMovie-client">See project on GitHub</a>
       </div>
       <div class="grid__item">
-        <h2>The Lord of the Web</h2>
+        <h2>Line</h2>
         <p>
-          Coding is fun
+          Line is a chat-app built with React Native, Expo, Gifted Chat and Google Firebase/Firestore. In addition to chat, the users can send pictures from their media library, take photos with their cameras and send their current location.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/ETweb51/line">See project on GitHub</a>
       </div>
       <div class="grid__item">
         <h2>Meet</h2>
