--- a/work.html
+++ b/work.html
@@ -37,11 +37,37 @@
     <div class="grid">
       <div class="grid__item">
         <h2>Pokédex</h2>
+        <img src="img/pokedex.png" alt="Screenshot of Pokédex" width="475px"/>
         <p>
           A simple App, which uses an external API to get Information about the first generation of Pokémons. Built with HTML, CSS, JavaScript, Bootstrap and JQuery.
         </p>
         <a href="https://github.com/ETweb51/pokedex">See project on GitHub</a>
         <a href="https://etweb51.github.io/pokedex/">See projects website</a>
+      </div>
+      <div class="grid__item">
+        <h2>Line</h2>
+        <img src="img/line.jpeg" width="200px"/>
+        <img src="img/line2.jpeg" width="200px" />
+        <p>
+          Line is a chat-app built with React Native, Expo, Gifted Chat and Google Firebase/Firestore. In addition to chat, the users can send pictures from their media library, take photos with their cameras and send their current location.
+        </p>
+        <a href="https://github.com/ETweb51/line">See project on GitHub</a>
+      </div>
+      <div class="grid__item">
+        <h2>Meet</h2>
+        <img src="img/meet.png" width="475px" />
+        <p>
+          A severless progressive-web-application (PWA), which built with React. It uses the Google Calender API to fetch and show upcoming events in certain cities areound the globe. It was built on a test-driven approach.
+        </p>
+        <a href="https://github.com/ETweb51/meet">See project on GitHub</a>
+        <a href="https://ETweb51.github.io/meet/">See projects website</a>
+      </div>
+      <div class="grid__item">
+        <h2>myMovie React Client</h2>
+        <p>
+          A client-side web-application built with React.
+        </p>
+        <a href="https://github.com/ETweb51/myMovie-client">See project on GitHub</a>
       </div>
       <div class="grid__item">
         <h2>myMovie API</h2>
@@ -51,23 +77,10 @@
         <a href="https://github.com/ETweb51/movie_api">See project on GitHub</a>
       </div>
       <div class="grid__item">
-        <h2>myMovie Client</h2>
+        <h2>myMovie Angular Client</h2>
+        <img src="img/angular.png" width="475px"/>
         <p>
-          A client-side web-application built with React.
-        </p>
-        <a href="https://github.com/ETweb51/myMovie-client">See project on GitHub</a>
-      </div>
-      <div class="grid__item">
-        <h2>Line</h2>
-        <p>
-          Line is a chat-app built with React Native, Expo, Gifted Chat and Google Firebase/Firestore. In addition to chat, the users can send pictures from their media library, take photos with their cameras and send their current location.
-        </p>
-        <a href="https://github.com/ETweb51/line">See project on GitHub</a>
-      </div>
-      <div class="grid__item">
-        <h2>Meet</h2>
-        <p>
-          A severless progressive-web-application (PWA), which built with React. It uses the Google Calender API to fetch and show upcoming events in certain cities areound the globe. It was built on a test-driven approach.
+          A client-side web-application built with Angular. 
         </p>
         <a href="https://github.com/ETweb51/meet">See project on GitHub</a>
         <a href="https://ETweb51.github.io/meet/">See projects website</a>
