--- a/contact.html
+++ b/contact.html
@@ -38,24 +38,9 @@
     <div>
       Ertugrul<br>
       Berlin, Germany<br>
-      Tel <a href="tel:+491234567">+49 1234567</a><br>
-      Skype <a href="skype:et@skype.com"> et@skype.com</a><br>
-      <a href="mailto:et@mail.com">et@mail.com</a><br>
+      You can contact me through:<br>
+      <a href="mailto:et@mail.com">webdev.et@gmail.com</a><br>
       <a href="mailto:et@mail.com">Contact me</a><br>
-      You can also contact me through the form below:<br>
-    </div>
-    <div>
-      <form action="" method="post" id="contact-form">
-        <label class="standard-label" for="contact-email">Email: </label>
-        <input type="email" id="contact-email" required>
-
-        <label class="standard-label" for="contact-telephone">Telephone: </label>
-        <input type="tel" id="contact-telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
-
-        <label class="standard-label" for="contact-message">Message: </label>
-        <textarea id="contact-message" maxlength="240" required></textarea>
-        <input type="submit" value="Send message" class="button">
-      </form>
     </div>
   </main>
   <footer class="page-footer">
