--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
         <p>
           A simple App, which uses an external API to get Information about the first generation of Pokémons. Built with HTML, CSS, JavaScript, Bootstrap and JQuery.
         </p>
-        <a href="https://github.com/ETweb51/pokedex">See project on GitHub</a>
+        <a href="https://github.com/ETweb51/pokedex">See project on GitHub</a><br>
         <a href="https://etweb51.github.io/pokedex/">See projects website</a>
       </div>
       <div class="grid__item">
@@ -59,7 +59,7 @@
         <p>
           A severless progressive-web-application (PWA), which built with React. It uses the Google Calender API to fetch and show upcoming events in certain cities areound the globe. It was built on a test-driven approach.
         </p>
-        <a href="https://github.com/ETweb51/meet">See project on GitHub</a>
+        <a href="https://github.com/ETweb51/meet">See project on GitHub</a><br>
         <a href="https://ETweb51.github.io/meet/">See projects website</a>
       </div>
       <div class="grid__item">
@@ -82,7 +82,7 @@
         <p>
           A client-side web-application built with Angular. 
         </p>
-        <a href="https://github.com/ETweb51/meet">See project on GitHub</a>
+        <a href="https://github.com/ETweb51/meet">See project on GitHub</a><br>
         <a href="https://ETweb51.github.io/meet/">See projects website</a>
       </div>
     </div>
