--- a/work.html
+++ b/work.html
@@ -82,8 +82,8 @@
         <p>
           A client-side web-application built with Angular. 
         </p>
-        <a href="https://github.com/ETweb51/meet">See project on GitHub</a><br>
-        <a href="https://ETweb51.github.io/meet/">See projects website</a>
+        <a href="https://github.com/ETweb51/myMovie-Angular-Client">See project on GitHub</a><br>
+        <a href="https://ETweb51.github.io/myMovie-Angular-Client/">See projects website</a>
       </div>
     </div>
   </section>
