--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
     <div class="grid">
       <div class="grid__item">
         <h2>Pokédex</h2>
-        <img src="img/pokedex.png" alt="Screenshot of Pokédex" width="475px"/>
+        <img src="img/pokedex.png" alt="Screenshot of Pokédex" width="auto" max-width="475"/>
         <p>
           A simple App, which uses an external API to get Information about the first generation of Pokémons. Built with HTML, CSS, JavaScript, Bootstrap and JQuery.
         </p>
@@ -46,8 +46,8 @@
       </div>
       <div class="grid__item">
         <h2>Line</h2>
-        <img src="img/line.jpeg" width="200px"/>
-        <img src="img/line2.jpeg" width="200px" />
+        <img src="img/line.jpeg" width="auto" max-width="200px"/>
+        <img src="img/line2.jpeg" width="auto" max-width="200px" />
         <p>
           Line is a chat-app built with React Native, Expo, Gifted Chat and Google Firebase/Firestore. In addition to chat, the users can send pictures from their media library, take photos with their cameras and send their current location.
         </p>
@@ -55,7 +55,7 @@
       </div>
       <div class="grid__item">
         <h2>Meet</h2>
-        <img src="img/meet.png" width="475px" />
+        <img src="img/meet.png" width="auto" max-width="475px" />
         <p>
           A severless progressive-web-application (PWA), which built with React. It uses the Google Calender API to fetch and show upcoming events in certain cities areound the globe. It was built on a test-driven approach.
         </p>
@@ -78,7 +78,7 @@
       </div>
       <div class="grid__item">
         <h2>myMovie Angular Client</h2>
-        <img src="img/angular.png" width="475px"/>
+        <img src="img/angular.png" width="auto" max-width="475px"/>
         <p>
           A client-side web-application built with Angular. 
         </p>
