--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
         <h2>Pokédex</h2>
         <img src="img/pokedex.png" alt="Screenshot of Pokédex" width="90%" />
         <p>
-          A simple App, which uses an external API to get Information about the first generation of Pokémons. Built with HTML, CSS, JavaScript, Bootstrap and JQuery.
+          A simple App, which uses an external API to get information about the first generation of Pokémons. Built with HTML, CSS, JavaScript, Bootstrap and JQuery.
         </p>
         <a href="https://github.com/ETweb51/pokedex">See project on GitHub</a><br>
         <a href="https://etweb51.github.io/pokedex/">See projects website</a>
@@ -57,7 +57,7 @@
         <h2>Meet</h2>
         <img src="img/meet.png" width="90%"/>
         <p>
-          A severless progressive-web-application (PWA), which built with React. It uses the Google Calender API to fetch and show upcoming events in certain cities areound the globe. It was built on a test-driven approach.
+          A severless progressive-web-application (PWA), which is built with React. It uses the Google Calender API to fetch and show upcoming events in certain cities around the globe. It was built on a test-driven approach.
         </p>
         <a href="https://github.com/ETweb51/meet">See project on GitHub</a><br>
         <a href="https://ETweb51.github.io/meet/">See projects website</a>
