--- a/work.html
+++ b/work.html
@@ -46,10 +46,9 @@
       </div>
       <div class="grid__item">
         <h2>Line</h2>
-        <img src="img/line.jpeg" width="45%" />
-        <img src="img/line2.jpeg" width="45%"/>
+        <img src="img/connector.jpeg" width="90%"/>
         <p>
-          Line is a chat-app built with React Native, Expo, Gifted Chat and Google Firebase/Firestore. In addition to chat, the users can send pictures from their media library, take photos with their cameras and send their current location.
+          Connector is a chat-app built with React Native, Expo, Gifted Chat and Google Firebase/Firestore. In addition to chat, the users can send pictures from their media library, take photos with their cameras and send their current location.
         </p>
         <a href="https://github.com/ETweb51/line">See project on GitHub</a>
       </div>
